--- a/Infinito-Qs/QuestionManagement/QuestionAnalyzer/package.json
+++ b/Infinito-Qs/QuestionManagement/QuestionAnalyzer/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "mongoose": "^4.4.2",
-    "request": "^2.69.0"
+    "mongoose"   : "^4.4.2",
+    "request"    : "^2.69.0",
+    "underscore" : "^1.8.3"
+  },
+  "scripts" : {
+    "start": "node questionAnalyzer.js config -d"
   }
 }
