--- a/Infinito-Qs/QuestionManagement/package.json
+++ b/Infinito-Qs/QuestionManagement/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.3.0",
     "mongoose": "^4.3.7",
     "morgan": "~1.6.1",
+    "ng-toast": "^2.0.0",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
     "promise": "^7.1.1",
