--- a/Infinito-Qs/QuestionManagement/QuestionAnalyzer/package.json
+++ b/Infinito-Qs/QuestionManagement/QuestionAnalyzer/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "mathjs": "^3.2.0",
     "mongoose": "^4.4.2",
+    "progress": "^1.1.8",
     "request": "^2.69.0",
     "underscore": "^1.8.3"
   },
