--- a/Infinito-Qs/QuestionManagement/package.json
+++ b/Infinito-Qs/QuestionManagement/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.3.7",
     "morgan": "~1.6.1",
     "ng-toast": "^2.0.0",
+    "node-schedule": "^1.1.0",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
     "promise": "^7.1.1",
