--- a/Infinito-Qs/QuestionManagement/package.json
+++ b/Infinito-Qs/QuestionManagement/package.json
@@ -27,6 +27,10 @@
     "wagner-core": "^0.2.0"
   },
   "devDependencies": {
+    "grunt-contrib-compress": "^1.2.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "mocha": "^2.4.5",
     "sinon": "^1.17.3"
   }
