--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,19 @@ services:
     links:
       - db
       - redis
+  questionManagement:
+    build: ./Infinito-Qs/QuestionManagement
+    image: quizrt/question-manager
+    environment:
+      PORT: 4000
+      MONGO_URL: mongodb://db:27017/QuizRTQuestions
+    expose:
+      - 4000
+    ports:
+      - 4000:4000
+    links:
+      - db
+      - redis
   db:
     image: mvertes/alpine-mongo
     expose:
